--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <button id="addCanvasBtn">Adicionar Canvas</button>
         <button id="clearCanvasBtn">Limpar Canvas</button>
         <button id="saveBtn">Salvar Tudo</button>
+        <button id="syncBtn">Sincronizar</button>
         <button id="loadBtn">Carregar</button>
         <select id="canvasSelector"></select>
+        <input type="text" id="sessionId" placeholder="ID da Sessão" value="sessao-padrao">
     </div>
     
     <div class="container">
